<resources>
    <string name="app_name">TestAndroidProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="layouttag">Layouttag</string>
    <string name="tapitemmsg">Please tap on Top Tabs to change text</string>
    <string name="textview1">TextView 1</string>
    <string name="textview2">TextView 2</string>
    <string name="textview3">TextView 3</string>
    <string name="redtext">Red</string>
    <string name="greentext">Green</string>
    <string name="bluetext">Blue</string>
    <string name="modeoftransport">Mode of Transport:</string>
    <string name="cartxt">Car - </string>
    <string name="traintxt">Train - </string>
    <string name="navigate">Navigate</string>
    <string name="errormsg">Some error has occurred. Please try again.</string>


</resources>
