<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="firstfragmentVM"
            type="com.test.testandroidproject.models.FirstFragmentViewModel" />
    </data>

    <ScrollView style="@style/OuterContainerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                style="@style/TabsOnTopStyle"
                app:tabGravity="fill"
                app:tabMode="scrollable" />


            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                style="@style/ViewPagerStyle" />


            <RelativeLayout style="@style/RelativeLayoutMiddle">

                <TextView
                    style="@style/MiddleTextView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@{firstfragmentVM.lefttextview}"
                     />

                <TextView
                    style="@style/MiddleTextView"
                    android:layout_centerInParent="true"
                    android:text="@{firstfragmentVM.midtextview}" />

                <TextView
                    style="@style/MiddleTextView"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:text="@{firstfragmentVM.righttextview}" />

            </RelativeLayout>

            <TextView
                android:id="@+id/selected_textview"
                style="@style/SelectedTextViewStyle"
                android:hint="@string/tapitemmsg"
                android:text="@{firstfragmentVM.selectedtextview}"
                />

            <LinearLayout
                android:id="@+id/bottom_btns_container"
                style="@style/BottomButtonsContainer">

                <Button
                    android:id="@+id/red_btn"
                    style="@style/RedBtnStyle"
                    android:text="@string/redtext" />

                <Button
                    android:id="@+id/green_btn"
                    style="@style/GreenBtnStyle"
                    android:text="@string/greentext" />

                <Button
                    android:id="@+id/blue_btn"
                    style="@style/BlueBtnStyle"
                    android:text="@string/bluetext" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>